TODO addition, server folder removal from project, readme doc updates

--- a/TODO
+++ b/TODO
@@ -1,6 +1,7 @@
 TODO
 - make sure to use env variable for webpack config to pick the variables
 - research more on usage of typescript standards to be added for node.js
+- docker file to be added
 
 Done:
 - using nodemon with node + typsscript
