--- a/TODO
+++ b/TODO
@@ -2,6 +2,9 @@ TODO
 - make sure to use env variable for webpack config to pick the variables
 - research more on usage of typescript standards to be added for node.js
 - docker file to be added
+- create one simple api
+- setting up unit test cases, more research on libraries
+- more research on integration test cases
 
 Done:
 - using nodemon with node + typsscript
